test/bad/class1.pacc
/*
nopacc 8:1 'invalid range'
*/

Bad :: char * ← [a-c-x-z] → { "foo" }
